--- a/views/header.mustache
+++ b/views/header.mustache
@@ -1,4 +1,5 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-light bg-light">
+
   <div class="container-fluid d-flex justify-content-between align-items-center">
     <!-- Left side: Brand -->
     <a class="navbar-brand" href="/">Prism Dance Studio</a>
