--- a/views/userManagement.mustache
+++ b/views/userManagement.mustache
@@ -8,8 +8,9 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
   <link rel="stylesheet" href="/style.css">
 </head>
-<body class="container">
-  {{> header}}
+<body>
+{{> header}}
+<div class="container">
   <h1>{{title}}</h1>
   
   <!-- Link to add a new organiser -->
@@ -49,6 +50,7 @@
   
   <a href="/organiser" class="btn btn-secondary mt-3">Back to Dashboard</a>
   {{> footer}}
+  </div>
 </body>
 </html>
 
