--- a/views/newUpdate.mustache
+++ b/views/newUpdate.mustache
@@ -7,8 +7,9 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
   <link rel="stylesheet" href="/style.css">
 </head>
-<body class="container">
-  {{> header}}
+<body>
+{{> header}}
+<div class="container">
   <h1 class="mt-4">{{title}}</h1>
   <form method="post" action="/organiser/new-update">
     <div class="form-group">
@@ -22,6 +23,7 @@
     <input type="submit" value="Add Update" class="btn btn-primary">
   </form>
   <a href="/organiser" class="btn btn-secondary mt-3">Back to Dashboard</a>
+  </div>
   {{> footer}}
 </body>
 </html>
