--- a/views/aboutUs.mustache
+++ b/views/aboutUs.mustache
@@ -1,3 +1,10 @@
+<!-- 
+  About Us Page Template
+  - Displays an image and information about Prism Dance Studio.
+  - Includes a header and footer from partials.
+  - Uses Bootstrap and custom CSS for styling.
+-->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
