--- a/views/bookingOptions.mustache
+++ b/views/bookingOptions.mustache
@@ -1,3 +1,11 @@
+<!-- 
+  Booking Options Page Template
+  - Provides options for the user before making a booking.
+  - Users can log in, register, or continue as a guest.
+  - Displays a 'Back to Courses' button.
+-->
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
