--- a/views/footer.mustache
+++ b/views/footer.mustache
@@ -1,3 +1,9 @@
+<!-- 
+  Footer and Scripts Template
+  - Includes the necessary JavaScript libraries (jQuery, Popper.js, Bootstrap) needed for interactive page functionality.
+  - Displays a footer with a copyright message for Prism Dance Studio.
+-->
+
 <script src="https://code.jquery.com/jquery-3.4.1.min.js" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" 
     integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" 
