--- a/views/location.mustache
+++ b/views/location.mustache
@@ -1,3 +1,13 @@
+<!-- 
+  Locations Page Template
+  - Displays information about the studio's location.
+  - Shows a brief message indicating that all studios are in the same building.
+  - Displays the address.
+  - Embeds a Google Map for visual reference.
+  - Includes header and footer partials.
+-->
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
