--- a/views/user/login.mustache
+++ b/views/user/login.mustache
@@ -1,3 +1,12 @@
+<!-- 
+  Login Page Template
+  - Displays a centered login card.
+  - Shows an error message if one is provided.
+  - Contains a form with email and password fields.
+  - Submits the form data to "/login".
+  - Also includes a link to the registration page.
+-->
+
 <!DOCTYPE html>
 <html>
 <head>
