changed mention of courses to Courses and Classes for easier user understanding

--- a/views/bookingConfirmation.mustache
+++ b/views/bookingConfirmation.mustache
@@ -21,7 +21,7 @@
     <h1>Booking Confirmation</h1>
     <p>Thank you for your booking!</p>
     <ul>
-      <li><strong>Course:</strong> {{booking.courseName}}</li>
+      <li><strong>Course/Class:</strong> {{booking.courseName}}</li>
       <li><strong>Your Name:</strong> {{booking.userName}}</li>
       <li><strong>Your Email:</strong> {{booking.email}}</li>
       <li><strong>Booked On:</strong> {{booking.bookedOn}}</li>
@@ -35,7 +35,7 @@
       <li><strong>Location:</strong> {{booking.location}}</li>
       {{/booking.location}}
     </ul>
-    <a href="/courses" class="btn btn-primary">Back to Courses</a>
+    <a href="/courses" class="btn btn-primary">Courses and Classes</a>
   </div>
   {{> footer}}
 </body>
