--- a/views/bookingHistory.mustache
+++ b/views/bookingHistory.mustache
@@ -24,28 +24,28 @@
     {{#bookings}}
       <div class="card mt-3">
         <div class="card-body">
-          <p><strong>Course:</strong> {{courseName}}</p>
+          <p><strong>Course/Class:</strong> {{courseName}}</p>
           <p><strong>Booked On:</strong> {{bookedOn}}</p>
           <p><strong>Your Name:</strong> {{userName}}</p>
           <p><strong>Your Email:</strong> {{email}}</p>
           {{#date}}
-            <p><strong>Course Date:</strong> {{date}}</p>
+            <p><strong> Date:</strong> {{date}}</p>
           {{/date}}
           {{#time}}
-            <p><strong>Course Time:</strong> {{time}}</p>
+            <p><strong>Time:</strong> {{time}}</p>
           {{/time}}
           {{#location}}
             <p><strong>Location:</strong> {{location}}</p>
           {{/location}}
-          <a href="/course/{{courseId}}" class="btn btn-primary mt-2">View Course Details</a>
+          <a href="/course/{{courseId}}" class="btn btn-primary mt-2">View Details</a>
           <a href="/book/cancel/{{_id}}" class="btn btn-danger mt-2">Cancel Booking</a>
         </div>
       </div>
     {{/bookings}}
     {{^bookings}}
-      <p>You haven't booked any courses yet.</p>
+      <p>You haven't made any bookings yet.</p>
     {{/bookings}}
-    <a href="/courses" class="btn btn-secondary mt-3">Back to Courses</a>
+    <a href="/courses" class="btn btn-secondary mt-3">Courses and Classes</a>
   </div>
   {{> footer}}
 </body>
