--- a/views/index.mustache
+++ b/views/index.mustache
@@ -23,7 +23,7 @@
           <div class="container mt-4">
             <h1>Welcome to Prism Dance Studio</h1>
             <img src="/banner.svg" alt="Prism Dance Studio" class="img-fluid mb-4" style="width:100%;">
-            <a href="/courses" class="btn btn-primary">View Courses</a>
+            <a href="/courses" class="btn btn-primary">View Courses and Classes </a>
             {{#user.organiser}}
               <a href="/organiser/new-update" class="btn btn-info">Add Update</a>
             {{/user.organiser}}
